# bz_opengl

./: CMakeLists.txt  README.md  notes.txt
data/models/tank/: tank.gltf
include/: geometry.hpp  netmsg.hpp
libs/enet/: Makefile  cmake_install.cmake  enet_test  enet_test_extra_peers  enet_test_unit
libs/raylib/: Makefile
libs/raylib/raylib/: Makefile
src/client/: client.cpp  client.hpp  input.cpp  input.hpp  main.cpp  networker.cpp  networker.hpp  player.cpp  player.hpp  renderer.cpp  renderer.hpp  shot.cpp  shot.hpp
src/server/: client.cpp  client.hpp  main.cpp  networker.cpp  networker.hpp  player.cpp  player.hpp  server.cpp  shot.cpp  shot.hpp
